UI/layout: fix header/toolbar stacking, full-width toolbar, client-only DnD\n\n- Make global header fixed; add body pt-10\n- Toolbar sticky under header; full-width container with centered content\n- Remove main px-6; restore content px-6 in BoardContent\n- Prevent list overlap via pt-10 below toolbar\n- Add BoardContentClient to render DnD client-only (avoid hydration mismatch)\n- Update board page and components accordingly\n- Include new API routes and components present in workspace

--- a/.gitignore
+++ b/.gitignore
@@ -23,11 +23,9 @@
 # misc
 .DS_Store
 *.pem
-
-# debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# Ignore Prisma SQLite dev database
+prisma/dev.db
+prisma/*.db-journal
 .pnpm-debug.log*
 
 # env files (can opt-in for committing if needed)
