--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "node": "20.x"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@prisma/client": "6.17.1",
     "@supabase/supabase-js": "2.75.1",
     "next": "15.5.6",
