--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@dnd-kit/utilities": "^3.2.2",
     "@prisma/client": "6.17.1",
     "@supabase/supabase-js": "2.75.1",
+    "jose": "^6.1.3",
     "next": "15.5.7",
     "prisma": "6.17.1",
     "react": "19.1.0",
