--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "next": "15.5.7",
     "prisma": "6.17.1",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-easy-crop": "^5.5.6"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
