--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "prisma": "6.17.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-easy-crop": "^5.5.6"
+    "react-easy-crop": "^5.5.6",
+    "sharp": "^0.34.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
